--- a/NumericalCalculatorPwa/Pages/Index.razor
+++ b/NumericalCalculatorPwa/Pages/Index.razor
@@ -1,33 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Calculator</h1>
 
-Sint sapiente voluptatem sapiente harum laborum perspiciatis error. Voluptates qui quos maxime cum commodi. Fugiat quia voluptatem tempore quos. Ut natus reprehenderit quibusdam vel est ad voluptatem enim.
-
-Quia doloremque dolorem qui id sit. Id quia quos et necessitatibus saepe illo error. Omnis voluptates similique maxime. Expedita in quam aut et provident omnis sapiente. Aliquid voluptatibus est magnam expedita explicabo.
-
-Impedit delectus in placeat quis corrupti accusantium. Dolores ut odio ut sit sed. Facilis nobis nobis enim omnis dicta eos tempore non. Cupiditate eum totam quam hic ducimus perferendis qui doloribus. Aut reprehenderit dolorem aut.
-
-Deleniti modi magnam et ut eos sit. Enim consequatur ea sed. Id voluptatibus quis iste et omnis.
-
-Numquam animi consectetur voluptates recusandae ratione id. A sed nulla quo omnis qui qui. Velit sed itaque nesciunt et totam autem. Et voluptatem culpa eligendi qui vitae nulla. Minus aspernatur eaque voluptas laudantium error consequatur fugit qui. Magni aspernatur voluptates accusantium dolorum.
-
-Sint sapiente voluptatem sapiente harum laborum perspiciatis error. Voluptates qui quos maxime cum commodi. Fugiat quia voluptatem tempore quos. Ut natus reprehenderit quibusdam vel est ad voluptatem enim.
-
-Quia doloremque dolorem qui id sit. Id quia quos et necessitatibus saepe illo error. Omnis voluptates similique maxime. Expedita in quam aut et provident omnis sapiente. Aliquid voluptatibus est magnam expedita explicabo.
-
-Impedit delectus in placeat quis corrupti accusantium. Dolores ut odio ut sit sed. Facilis nobis nobis enim omnis dicta eos tempore non. Cupiditate eum totam quam hic ducimus perferendis qui doloribus. Aut reprehenderit dolorem aut.
-
-Deleniti modi magnam et ut eos sit. Enim consequatur ea sed. Id voluptatibus quis iste et omnis.
-
-Numquam animi consectetur voluptates recusandae ratione id. A sed nulla quo omnis qui qui. Velit sed itaque nesciunt et totam autem. Et voluptatem culpa eligendi qui vitae nulla. Minus aspernatur eaque voluptas laudantium error consequatur fugit qui. Magni aspernatur voluptates accusantium dolorum.
-
-Sint sapiente voluptatem sapiente harum laborum perspiciatis error. Voluptates qui quos maxime cum commodi. Fugiat quia voluptatem tempore quos. Ut natus reprehenderit quibusdam vel est ad voluptatem enim.
-
-Quia doloremque dolorem qui id sit. Id quia quos et necessitatibus saepe illo error. Omnis voluptates similique maxime. Expedita in quam aut et provident omnis sapiente. Aliquid voluptatibus est magnam expedita explicabo.
-
-Impedit delectus in placeat quis corrupti accusantium. Dolores ut odio ut sit sed. Facilis nobis nobis enim omnis dicta eos tempore non. Cupiditate eum totam quam hic ducimus perferendis qui doloribus. Aut reprehenderit dolorem aut.
-
-Deleniti modi magnam et ut eos sit. Enim consequatur ea sed. Id voluptatibus quis iste et omnis.
-
-Numquam animi consectetur voluptates recusandae ratione id. A sed nulla quo omnis qui qui. Velit sed itaque nesciunt et totam autem. Et voluptatem culpa eligendi qui vitae nulla. Minus aspernatur eaque voluptas laudantium error consequatur fugit qui. Magni aspernatur voluptates accusantium dolorum.
+@code {
+}
