--- a/NumericalCalculatorPwa/_Imports.razor
+++ b/NumericalCalculatorPwa/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.JSInterop
 @using NumericalCalculatorPwa
 @using NumericalCalculatorPwa.Shared
+@using NumericalCalculatorPwa.Shared.Components
+@using NumericalCalculatorPwa.ViewModels
