--- a/NumericalCalculatorPwa/wwwroot/css/site.scss
+++ b/NumericalCalculatorPwa/wwwroot/css/site.scss
@@ -12,7 +12,7 @@ html, body {
     }
 
 @media (min-width: 48em) {
-    html {
+    html { 
         font-size: 18px;
     }
 }
@@ -60,7 +60,7 @@ html, body {
     text-align: center;
     border-top: .05rem solid #e5e5e5;
     border-bottom: .05rem solid #e5e5e5;
-    flex: 0 1 165px;
+    flex: 0 1;
 }
 
 app {
