--- a/NumericalCalculatorPwa/Shared/Components/InfoBar.razor
+++ b/NumericalCalculatorPwa/Shared/Components/InfoBar.razor
@@ -1,6 +1,9 @@
 ﻿
-<div class="alert alert-info">
-    <span class="oi oi-info" aria-hidden="true"></span> @ChildContent
+<div class="InfoBarComponent">
+    <div class="alert alert-info">
+        <span class="oi oi-in-circle oi-info" aria-hidden="true"></span>
+        <span class="text">@ChildContent</span>
+    </div>
 </div>
 
 @code {
