--- a/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
+++ b/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
@@ -1,6 +1,5 @@
 ﻿@page "/proportions"
 @using NumericalCalculatorPwa.Extensions;
-@using NumericalCalculatorPwa.Pages.Proportions.Components;
 
 <h1>Proportions</h1>
 
@@ -20,11 +19,11 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="form-group col-8">
+        <div class="form-group col-8 col-sm-9 col-md-10 col-lg-9 col-xl-10">
             <label for="proportionsResult">Result:</label>
             <input id="proportionsResult" type="text" class="form-control" @bind="result">
         </div>
-        <div class="form-group col-4 d-flex align-items-end">
+        <div class="form-group col-4 col-sm-3 col-md-2 col-lg-3 col-xl-2 d-flex align-items-end justify-content-end">
             <button class="btn btn-primary" @onclick="Calculate">Calculate</button>
         </div>
     </div>
