--- a/NumericalCalculatorPwa/Shared/Components/NavMenu.razor
+++ b/NumericalCalculatorPwa/Shared/Components/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-4 navbar navbar-dark navbar-expand-lg">
     <a class="navbar-brand" href=""> 
         <img src="icon-512.png" alt=">R" />
         <span class="pl-2">Numerical Calculator</span>
