--- a/NumericalCalculatorPwa/Shared/Components/RadioButton.razor
+++ b/NumericalCalculatorPwa/Shared/Components/RadioButton.razor
@@ -1,5 +1,5 @@
 ﻿<div class="custom-control custom-radio custom-control-inline">
-    <input type="radio" id="@Id" name="@GroupName" class="custom-control-input" @bind="Value">
+    <input type="radio" id="@Id" name="@GroupName" class="custom-control-input" @onchange="OnChangeCallback" checked="@(Checked)">
     <label class="custom-control-label" for="@Id">@Text</label>
 </div>
 
@@ -8,7 +8,10 @@
     public string Id { get; set; }
 
     [Parameter]
-    public bool Value { get; set; }
+    public bool Checked { get; set; } = false;
+
+    [Parameter]
+    public EventCallback<ChangeEventArgs> OnChangeCallback { get; set; }
 
     [Parameter]
     public string Text { get; set; }
