--- a/NumericalCalculatorPwa/wwwroot/css/site.scss
+++ b/NumericalCalculatorPwa/wwwroot/css/site.scss
@@ -48,19 +48,6 @@ label {
     padding: 0.5rem;
 }
 
-/* Page
------------------------------------------------------------*/
-
-.page {
-    margin-bottom: 2rem;
-}
-
-.standalone-mode .page {
-    margin-bottom: 0;
-    flex: 1 1 auto;
-    display: flex;
-}
-
 /* Page footer
 ---------------------------------------------------------*/
 
@@ -73,6 +60,19 @@ label {
     border-bottom: .02rem solid #e5e5e5;
     flex: 0 1;
     font-size: 0.8rem;
+}
+
+/* Page
+-----------------------------------------------------------*/
+
+.page {
+    margin-bottom: 2rem;
+}
+
+.standalone-mode .page {
+    margin-bottom: 0;
+    flex: 1 1 auto;
+    display: flex;
 }
 
 app {
@@ -132,6 +132,11 @@ app {
 .sidebar .nav-item a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
+}
+
+.main {
+    flex: 1 0;
+    max-width: 1000px;
 }
 
 .content {
