Enhanced rows managemend in Mean

--- a/NumericalCalculatorPwa/Pages/Mean/Mean.razor
+++ b/NumericalCalculatorPwa/Pages/Mean/Mean.razor
@@ -11,8 +11,7 @@
     <div class="form-group row align-items-center">
         <label class="col-12 col-md-4 col-lg-12 col-xl-4 col-form-label">Mean type</label>
         <div class="col-6 col-md-4 col-lg-6 col-xl-4">
-            <RadioButton 
-                         Id="rbArithmetic"
+            <RadioButton Id="rbArithmetic"
                          Text="Arithmetic"
                          GroupName="rbMeanTypeGroup"
                          Checked="true"
@@ -20,9 +19,8 @@
             </RadioButton>
         </div>
         <div class="col-6 col-md-4 col-lg-6 col-xl-4">
-            <RadioButton 
-                         Id="rbWeighted" 
-                         Text="Weighted" 
+            <RadioButton Id="rbWeighted"
+                         Text="Weighted"
                          GroupName="rbMeanTypeGroup"
                          OnChangeCallback="(() => { computationType = ComputationType.Weighted; })">
             </RadioButton>
@@ -33,10 +31,15 @@
         {
             <div class="row mb-2">
                 <div class="form-group col">
-                    <InputWithValidation Model="item.Value" OnChangeCallback="Validate"></InputWithValidation>
+                    <InputWithValidation Model="item.Value" OnChangeCallback="Validate" OnKeyUpCallback="ManageRowsCount"></InputWithValidation>
                 </div>
                 <div class="form-group col @(computationType == ComputationType.Weighted ? string.Empty : "d-none")">
-                    <InputWithValidation Model="item.Weight" OnChangeCallback="Validate"></InputWithValidation>
+                    <InputWithValidation Model="item.Weight" OnChangeCallback="Validate" OnKeyUpCallback="ManageRowsCount"></InputWithValidation>
+                </div>
+                <div class="col-1 @(valueInputs.Count > 1 ? string.Empty : "d-none")">
+                    <button class="btn btn-link @(IsLastRow(item) ? "d-none" : string.Empty)" @onclick="(() => RemoveRow(item))">
+                        <span class="oi oi-trash" aria-hidden="true"></span>
+                    </button>
                 </div>
             </div>
         }
@@ -53,7 +56,7 @@
 </div>
 
 @code {
-    MeanViewModel[] valueInputs = new MeanViewModel[1].Populate();
+    List<MeanViewModel> valueInputs = new List<MeanViewModel> { new MeanViewModel() };
 
     string generalErrorMessage = string.Empty;
     bool isValidationEnabled = false;
@@ -86,6 +89,29 @@
         {
             generalErrorMessage = ex.Message;
         }
+    }
+
+    public bool IsLastRow(MeanViewModel row)
+    {
+        return row == valueInputs.Last();
+    }
+
+    public void RemoveRow(MeanViewModel row)
+    {
+        valueInputs.Remove(row);
+    }
+
+    private void ManageRowsCount()
+    {
+        var lastRow = valueInputs.Last();
+
+        if (!IsRowEmpty(lastRow))
+            valueInputs.Add(new MeanViewModel());
+    }
+
+    private bool IsRowEmpty(MeanViewModel row)
+    {
+        return string.IsNullOrEmpty(row.Value.Value) && string.IsNullOrEmpty(row.Weight.Value);
     }
 
     public void Validate()
