--- a/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
+++ b/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
@@ -55,6 +55,8 @@
 
             var proportions = new Rychusoft.NumericalLibraries.Calculator.Proportions();
             result = proportions.Compute(values[0], values[1], values[2], values[3]);
+
+            isValidationEnabled = false;
         }
         catch (Exception ex)
         {
